# openfpm_pdata

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_bck  .gitmodules  0_vtk_parmetis_distribution_0.vtk  0_vtk_parmetis_distribution_10.vtk  0_vtk_parmetis_distribution_100.vtk  0_vtk_parmetis_distribution_20.vtk  0_vtk_parmetis_distribution_30.vtk  0_vtk_parmetis_distribution_40.vtk  0_vtk_parmetis_distribution_50.vtk  0_vtk_parmetis_distribution_60.vtk  0_vtk_parmetis_distribution_70.vtk  0_vtk_parmetis_distribution_80.vtk  0_vtk_parmetis_distribution_90.vtk  APR.hpp  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Common Mistake  FAQ  Jenkins_example_test  Jenkins_high_scal_test  Jenkins_med_scal_test  Jenkins_mpi_med_scal_test  Jenkins_sec_OS  Jenkins_sec_compilers  Jenkinsfile  Jenkinsfile_examples_test  Jenkinsfile_mpi  Jenkinsfile_mpi_examples_test  Jenkinsfile_numerics  Jenkinsfile_numerics_mpi  LICENSE.md  Makefile  Makefile.am  Makefile_debug  README  (+34 more)
images/: CMakeLists.txt  CartDecomposition_gen_vtk.cpp  Domain_decomposition.py  Makefile  Makefile.am  Metis_gen_vtk.cpp  Vector_dist.py  domain_gen_vtk.cpp  mooving_particles.py  mooving_particles_prc.py  openfpm.dot  particles_maps.py  vector.cpp  vector_dist.py  vector_ghost.py  vector_particles.py  vector_scal_vect.py
src/: CMakeLists.txt  CartesianGraphFactory_unit_test.hpp  Makefile  Makefile.am  Makefile.in  SubdomainGraphNodes.hpp  config.h  config.h.in  config.h.in~  debug.hpp  dec_optimizer.hpp  dec_optimizer_unit_test.hpp  gargabe.hpp  grid_dist.hpp  hypercube_unit_test.hpp  isolation.cu  main.cpp  main_single.cpp  metis_util.hpp  metis_util_unit_test.hpp  parmetis_dist_util.hpp  parmetis_util.hpp  pdata_performance.cpp  pdata_performance.hpp  test_isolation.hpp  test_multiple_o.cpp  unit_test_init_cleanup.hpp  util.hpp
src/.deps/: pdata-HeapMemory.Po  pdata-Memleak_check.Po  pdata-VCluster.Po  pdata-main.Po
src/Amr/: grid_dist_amr.hpp  grid_dist_amr_key.hpp  grid_dist_amr_key_iterator.hpp  grid_dist_amr_unit_tests.cpp
src/DCPSE/: Dcpse.hpp  DcpseDiagonalScalingMatrix.hpp  DcpseRhs.hpp  Monomial.hpp  MonomialBasis.hpp  MonomialBasisElement.hpp  Support.hpp  SupportBuilder.hpp  Vandermonde.hpp  VandermondeRowBuilder.hpp
src/DLB/: DLB.hpp  DLB_unit_test.hpp  LB_Model.hpp
src/Debug/: debug.hpp  debug_test.cpp
src/Decomposition/: AbstractDecompositionStrategy.hpp  AbstractDistributionStrategy.hpp  AbstractStrategyModels.hpp  BasicDecomposition.hpp  BasicDecomposition_unit_test.hpp  CartDecomposition.cpp  CartDecomposition.hpp  CartDecompositionStrategy.hpp  CartDecompositionStrategy_unit_test.hpp  CartDecomposition_ext.hpp  CartDecomposition_unit_test.hpp  CartDistributionStrategy.hpp  CartDistributionStrategy_unit_test.hpp  Decomposition.hpp  DecompositionStrategy_unit_test.hpp  DistModel.hpp  DistParMetisDistribution.hpp  Domain_NN_calculator_cart.hpp  Domain_NN_calculator_cart_unit_test.hpp  Domain_icells_cart.hpp  MetisDistribution.hpp  ORB.hpp  ORBDecompositionStrategy.hpp  ORBDecompositionStrategy_unit_test.hpp  ORB_unit_test.hpp  OrbDistributionStrategy.hpp  ParMetisDistribution.hpp  SequentialDistributionStrategy.hpp  common.hpp  dec_optimizer.hpp  dec_optimizer_unit_test.hpp  decomposition_util_test.hpp  ie_ghost.hpp  ie_loc_ghost.hpp  nn_processor.hpp  nn_processor_unit_test.hpp  shift_vect_converter.hpp
src/Formal_interface/: Alias.hpp  CellList.hpp  Constants.hpp  DataContainer.hpp  DataContainerFactory.hpp  DomainIterator.hpp  InitialCondition.hpp  Instance.hpp  Interaction_Impl.hpp  Neighborhood.hpp  OperationProxy.hpp  Particle.hpp  ParticleData.hpp  ParticleMethod.hpp  ParticleSignature.hpp  SimulationParameters.hpp  Transition.hpp  Util.hpp
src/Graph/: CartesianGraphFactory.hpp  CartesianGraphFactory_unit_test.hpp  DistCartesianGraphFactory.hpp  DistCartesianGraphFactory_unit_test.hpp  DistGraphFactory.hpp  dist_map_graph.hpp  dist_map_graph_unit_test.hpp  ids.hpp
src/Grid/: grid_dist_id.hpp  grid_dist_id_HDF5_chckpnt_restart_test.hpp  grid_dist_id_comm.hpp  grid_dist_id_def.hpp  grid_dist_id_iterator.hpp  grid_dist_id_iterator_dec.hpp  grid_dist_id_iterator_margin.hpp  grid_dist_id_iterator_sub.hpp  grid_dist_id_unit_test.cpp  grid_dist_id_unit_test.hpp  grid_dist_id_unit_test_ext_dom.hpp  grid_dist_id_unit_test_unb_ghost.hpp  grid_dist_key.hpp  grid_dist_util.hpp  staggered_dist_grid.hpp  staggered_dist_grid_copy.hpp  staggered_dist_grid_util.hpp  staggered_grid.hpp  staggered_grid_dist_unit_test.hpp  staggered_util.hpp
src/PolyMesh/: PolyMesh.hpp  PolyMesh_gradients.hpp
src/Space/: space.hpp  space_key.hpp
src/Vector/: se_class3_vector.hpp  se_class3_vector_unit_tests.hpp  vector_dist.hpp  vector_dist_HDF5_chckpnt_restart_test.hpp  vector_dist_MP_unit_tests.hpp  vector_dist_NN_tests.hpp  vector_dist_cell_list_tests.hpp  vector_dist_cl_hilb_performance_tests.hpp  vector_dist_cl_performance_tests.hpp  vector_dist_comm.hpp  vector_dist_complex_prp_unit_test.hpp  vector_dist_dlb_test.hpp  vector_dist_gpu_unit_tests.cpp  vector_dist_gpu_unit_tests.cu  vector_dist_iterator.hpp  vector_dist_kernel.hpp  vector_dist_key.hpp  vector_dist_multiphase_functions.hpp  vector_dist_ofb.hpp  vector_dist_operators.hpp  vector_dist_operators_unit_tests.hpp  vector_dist_performance_util.hpp  vector_dist_subset.hpp  vector_dist_unit_test.hpp  vector_dist_verlet_performance_tests.hpp
src/cmake/: openfpmConfig-configure.cmake
src/config/: config_cmake.h.in
src/initialize/: initialize_wrapper.hpp  initialize_wrapper_cpu.cpp  initialize_wrapper_cuda.cu
src/lib/: activate_pyofpm_env.sh  bench.py  gray_scott_3d.py  installer.py  minimon.py  pdata.cpp  pdata.hpp  pdata_python.cpp  requirements.txt
src/scripts/: postflight  postinst
src/util/: common_pdata.hpp  generic.hpp
vtk/: CartDecomposition_gen_vtk.cpp  Domain_decomposition.py  Makefile  Makefile.am  Makefile.in  Metis_gen_vtk.cpp  domain_gen_vtk.cpp
vtk/.deps/: cart_dec-CartDecomposition_gen_vtk.Po  cart_dec-HeapMemory.Po  cart_dec-Memleak_check.Po  cart_dec-PtrMemory.Po  cart_dec-VCluster.Po  (+10 more)
(+674 files in other folders)
